# Api/api/handlers/v1/brands.go
@@ -20,8 +20,8 @@ import (
 // @Produce json
 // @Param brand body model.CreateBrandReq true "CreateBrand"
 // @Success 200 {object} model.Brand!
-// @Success 400 {object} response
-// @Success 500 {object} response
+// @Failure 400 {object} model.StandardErrorModel
+// @Failure 500 {object} model.StandardErrorModel
 // @Router /v1/post/brand [post]
 func (h *handlerV1) CreateBrand(c *gin.Context) {
 	er := CheckClaims(h, c)
@@ -57,11 +57,11 @@ func (h *handlerV1) CreateBrand(c *gin.Context) {
 // @Accept json
 // @Produce json
 // @Success 200 {object} model.Brands!
-// @Success 400 {object} response
-// @Success 500 {object} response
+// @Failure 400 {object} model.StandardErrorModel
+// @Failure 500 {object} model.StandardErrorModel
 // @Router /v1/post/brand/getAll [get]
 func (h *handlerV1) GetAllBrands(c *gin.Context) {
-	
+
 	ctx, cancel := context.WithTimeout(context.Background(), time.Second*time.Duration(h.cfg.CtxTimeout))
 	defer cancel()
 
@@ -83,8 +83,8 @@ func (h *handlerV1) GetAllBrands(c *gin.Context) {
 // @Produce json
 // @Param id path string true "Brand_id"
 // @Success 200 {object} model.Brand
-// @Success 400 {object} response
-// @Success 500 {object} response
+// @Failure 400 {object} model.StandardErrorModel
+// @Failure 500 {object} model.StandardErrorModel
 // @Router /v1/post/brand/{id} [delete]
 func (h *handlerV1) DeleteBrand(c *gin.Context) {
 	var jspbMarshal protojson.MarshalOptions
@@ -95,18 +95,18 @@ func (h *handlerV1) DeleteBrand(c *gin.Context) {
 		h.log.Error("failed while checking token")
 		return
 	}
-	id :=c.Param("id")
+	id := c.Param("id")
 
-	ctx,cancel:=context.WithTimeout(context.Background(),time.Second*time.Duration(h.cfg.CtxTimeout))
+	ctx, cancel := context.WithTimeout(context.Background(), time.Second*time.Duration(h.cfg.CtxTimeout))
 	defer cancel()
 
-	brand,err:=h.serviceManager.PostService().DeleteBrand(ctx,&pb.WithId{Id: id})
-	if err!=nil{
-		newResponse(c,http.StatusInternalServerError,"failed while deleting brand with id")
-		h.log.Error("failed while delting brand by id",logger.Error(err))
+	brand, err := h.serviceManager.PostService().DeleteBrand(ctx, &pb.WithId{Id: id})
+	if err != nil {
+		newResponse(c, http.StatusInternalServerError, "failed while deleting brand with id")
+		h.log.Error("failed while delting brand by id", logger.Error(err))
 		return
 	}
-	c.JSON(http.StatusAccepted,brand)
+	c.JSON(http.StatusAccepted, brand)
 }
 
 // GetPostByBrand ...
@@ -118,29 +118,29 @@ func (h *handlerV1) DeleteBrand(c *gin.Context) {
 // @Produce json
 // @Param id path string true "Brand_id"
 // @Success 200 {object} model.Posts
-// @Success 400 {object} response
-// @Success 500 {object} response
+// @Failure 400 {object} model.StandardErrorModel
+// @Failure 500 {object} model.StandardErrorModel
 // @Router /v1/post/brand/getPost/{id} [get]
-func (h *handlerV1) GetPostByBrand(c *gin.Context)  {
-	er:=CheckClaims(h,c)
-	if er==nil{
-		newResponse(c,http.StatusUnauthorized,"failed while checking token")
+func (h *handlerV1) GetPostByBrand(c *gin.Context) {
+	er := CheckClaims(h, c)
+	if er == nil {
+		newResponse(c, http.StatusUnauthorized, "failed while checking token")
 		h.log.Error("failed while checking token")
 		return
 	}
 
-	id:=c.Param("id")
+	id := c.Param("id")
 
-	ctx,cancel:=context.WithTimeout(context.Background(),time.Second*time.Duration(h.cfg.CtxTimeout))
+	ctx, cancel := context.WithTimeout(context.Background(), time.Second*time.Duration(h.cfg.CtxTimeout))
 	defer cancel()
 
-	posts,err:=h.serviceManager.PostService().GetPostByBrand(ctx,&pb.WithId{Id: id})
-	if err!=nil{
-		newResponse(c,http.StatusInternalServerError,"failed while getting posts by brand")
-		h.log.Error("failed while getting posts by brand",logger.Error(err))
+	posts, err := h.serviceManager.PostService().GetPostByBrand(ctx, &pb.WithId{Id: id})
+	if err != nil {
+		newResponse(c, http.StatusInternalServerError, "failed while getting posts by brand")
+		h.log.Error("failed while getting posts by brand", logger.Error(err))
 		return
 	}
-	c.JSON(http.StatusAccepted,posts)
+	c.JSON(http.StatusAccepted, posts)
 }
 
 // GetBrandById ...
@@ -152,27 +152,27 @@ func (h *handlerV1) GetPostByBrand(c *gin.Context)  {
 // @Produce json
 // @Param id path string true "Brand_id"
 // @Success 200 {object} model.Brand
-// @Success 400 {object} response
-// @Success 500 {object} response
+// @Failure 400 {object} model.StandardErrorModel
+// @Failure 500 {object} model.StandardErrorModel
 // @Router /v1/post/brand/getByid/{id} [get]
-func (h *handlerV1) GetBrandById(c *gin.Context){
+func (h *handlerV1) GetBrandById(c *gin.Context) {
 	var jspbMarshal protojson.MarshalOptions
 	jspbMarshal.UseProtoNames = true
-	er:=CheckClaims(h,c)
-	if er==nil{
-		newResponse(c,http.StatusUnauthorized,"failed while checking token")
+	er := CheckClaims(h, c)
+	if er == nil {
+		newResponse(c, http.StatusUnauthorized, "failed while checking token")
 		h.log.Error("failed while checking token")
 		return
 	}
-	id :=c.Param("id")
-	ctx,cancel:=context.WithTimeout(context.Background(),time.Second*time.Duration(h.cfg.CtxTimeout))
+	id := c.Param("id")
+	ctx, cancel := context.WithTimeout(context.Background(), time.Second*time.Duration(h.cfg.CtxTimeout))
 	defer cancel()
 
-	brand,err:=h.serviceManager.PostService().GetBrandById(ctx,&pb.WithId{Id: id})
-	if err!=nil{
-		newResponse(c,http.StatusInternalServerError,"failed while getting brand by id")
-		h.log.Error("failed while getting brand by id",logger.Error(err))
+	brand, err := h.serviceManager.PostService().GetBrandById(ctx, &pb.WithId{Id: id})
+	if err != nil {
+		newResponse(c, http.StatusInternalServerError, "failed while getting brand by id")
+		h.log.Error("failed while getting brand by id", logger.Error(err))
 		return
 	}
-	c.JSON(http.StatusAccepted,brand)
+	c.JSON(http.StatusAccepted, brand)
 }
