# Api/api/handlers/v1/category.go
@@ -21,8 +21,8 @@ import (
 // @Produce json
 // @Param id path string true "Category_id"
 // @Success 200 {object} model.Posts!
-// @Success 400 {object} response
-// @Success 500 {object} response
+// @Failure 400 {object} model.StandardErrorModel
+// @Failure 500 {object} model.StandardErrorModel
 // @Router /v1/category/{id} [get]
 func (h *handlerV1) GetPostByCategory(c *gin.Context) {
 	var jspbMarshal protojson.MarshalOptions
@@ -60,8 +60,8 @@ func (h *handlerV1) GetPostByCategory(c *gin.Context) {
 // @Produce json
 // @Param category body model.CategiryReq true "CreateCategory"
 // @Success 200 {object} model.Category!
-// @Success 400 {object} response
-// @Success 500 {object} response
+// @Failure 400 {object} model.StandardErrorModel
+// @Failure 500 {object} model.StandardErrorModel
 // @Router /v1/category [post]
 func (h *handlerV1) CreateCategory(c *gin.Context) {
 	er := CheckClaims(h, c)
@@ -97,16 +97,16 @@ func (h *handlerV1) CreateCategory(c *gin.Context) {
 // @Accept json
 // @Produce json
 // @Success 200 {object} model.Categories!
-// @Success 400 {object} response
-// @Success 500 {object} response
+// @Failure 400 {object} model.StandardErrorModel
+// @Failure 500 {object} model.StandardErrorModel
 // @Router /v1/category/getAll [get]
 func (h *handlerV1) GetAllCategories(c *gin.Context) {
-	
+
 	ctx, cancel := context.WithTimeout(context.Background(), time.Second*time.Duration(h.cfg.CtxTimeout))
 	defer cancel()
 	categories, err := h.serviceManager.PostService().GetAllCategories(ctx, &pb.Empty{})
 	if err != nil {
-		newResponse(c,http.StatusInternalServerError,model.ErrInputBody.Error())
+		newResponse(c, http.StatusInternalServerError, model.ErrInputBody.Error())
 		h.log.Error("failed while getting all categories ", logger.Error(err))
 		return
 	}
@@ -122,15 +122,15 @@ func (h *handlerV1) GetAllCategories(c *gin.Context) {
 // @Produce json
 // @Param id path string true "Category_ID"
 // @Success 200 {object} model.Category!
-// @Success 400 {object} response
-// @Success 500 {object} response
+// @Failure 400 {object} model.StandardErrorModel
+// @Failure 500 {object} model.StandardErrorModel
 // @Router /v1/category/{id} [delete]
 func (h *handlerV1) DeleteCategory(c *gin.Context) {
 	var jspbMarshal protojson.MarshalOptions
 	jspbMarshal.UseProtoNames = true
 	er := CheckClaims(h, c)
 	if er == nil {
-		newResponse(c,http.StatusUnauthorized,"error while checking token")
+		newResponse(c, http.StatusUnauthorized, "error while checking token")
 		h.log.Fatal("failed while check token")
 		return
 	}
@@ -157,8 +157,8 @@ func (h *handlerV1) DeleteCategory(c *gin.Context) {
 // @Produce json
 // @Param id path string true "Category_ID"
 // @Success 200 {object} model.Category!
-// @Success 400 {object} response
-// @Success 500 {object} response
+// @Failure 400 {object} model.StandardErrorModel
+// @Failure 500 {object} model.StandardErrorModel
 // @Router /v1/category/getById/{id} [get]
 func (h *handlerV1) GetCategory(c *gin.Context) {
 	var jspbMarshal protojson.MarshalOptions
@@ -166,7 +166,7 @@ func (h *handlerV1) GetCategory(c *gin.Context) {
 
 	er := CheckClaims(h, c)
 	if er == nil {
-		newResponse(c,http.StatusUnauthorized,"failed while checking token")
+		newResponse(c, http.StatusUnauthorized, "failed while checking token")
 		h.log.Fatal("failed while cheking token")
 		return
 	}
@@ -177,7 +177,7 @@ func (h *handlerV1) GetCategory(c *gin.Context) {
 
 	category, err := h.serviceManager.PostService().GetCategory(ctx, &pb.CatID{Id: id})
 	if err != nil {
-		newResponse(c,http.StatusInternalServerError,model.ErrIdNotFound.Error())
+		newResponse(c, http.StatusInternalServerError, model.ErrIdNotFound.Error())
 		h.log.Error("failed while getting category by id", logger.Error(err))
 		return
 	}
